--- a/template.eloualid/css/main.css
+++ b/template.eloualid/css/main.css
@@ -1,3 +1,69 @@
+
+
+
+.footer{
+  background: #152F4F;
+  color:white;
+
+.links{
+ul {list-style-type: none;}
+li a{
+  color: white;
+  transition: color .2s;
+&:hover{
+   text-decoration:none;
+   color:#4180CB;
+ }
+}
+}
+.about-company{
+i{font-size: 25px;}
+a{
+  color:white;
+  transition: color .2s;
+&:hover{color:#4180CB}
+}
+}
+.location{
+i{font-size: 18px;}
+}
+.copyright p{border-top:1px solid rgba(255,255,255,.1);}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 html {
     line-height: 1.15;
     /* 1 */
@@ -1812,4 +1878,9 @@ span.flatpickr-weekday {
         margin-bottom: 0;
     }
 }
+
+
+
+
+
 
