--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,52 +1,65 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     background: black;
     font-family: 'Raleway', sans-serif;
     background: url("../../src/rest.jpeg") center center no-repeat fixed;
     background-size: cover;
 }
 
-option{
+option {
     padding: 5px;
     border-radius: 10px;
 }
 
-#run{
+#run {
     line-height: 35px;
     font-size: 150%;
 }
 
 /* Template Styling */
-.name{
+.name {
     font-weight: bold;
     /*-webkit-text-stroke: 1px black;*/
     letter-spacing: 1.6px;
 }
 
-.location{
+.location {
     font-style: italic;
     font-weight: bold;
 }
 
-.rating{
+.rating {
     font-size: 200%;
     font-weight: bold;
     /*-webkit-text-stroke: 1px black;*/
     letter-spacing: 1.6px;
 }
 
-.timings{
+.timings {
     font-style: italic;
 }
 
-.temp-card{
-    background-color: rgba(0,0,0, 0.4);
+.temp-card {
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
+.footer{
+    background: rgba(21, 47, 79, 0.6);
+    width: 100%;
+    position: absolute;
+    top: 100vh;
+}
 
+a{
+    color: #D6924A;
+}
+
+a:hover{
+    color: white;
+}
