--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ option {
     font-size: 150%;
 }
 
-#target{
+#target {
     object-fit: cover;
     background-size: cover;
 }
@@ -54,19 +54,34 @@ option {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
-.footer{
+/* /Template */
+
+.footer {
     background: rgba(21, 47, 79, 0.6);
     width: 100%;
 }
 
-.margin{
+.margin {
     margin-top: 100vh;
 }
 
-a{
+a {
     color: #D6924A;
 }
 
-a:hover{
+a:hover {
     color: white;
+}
+
+.coins {
+    height: 31px;
+    display: flex;
+}
+
+.coin1, .coin2, .coin3, .coin4 {
+    height: 30px;
+    width: 30px;
+    margin-right: 3px;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
