--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,24 +20,18 @@ option {
 #bigLogo{
     background: url("../../src/LOGO2.svg") no-repeat center center;
     background-size: 100%;
-    width: 40vw;
+    width: 60vw;
     height: 200px;
-}
-
-#run {
-    line-height: 35px;
 }
 
 #target {
     object-fit: cover;
-    background-size: cover;
+
 }
 
 /* Template Styling */
 .name {
-    font-weight: bold;
-    /*-webkit-text-stroke: 1px black;*/
-    letter-spacing: 1.6px;
+
 }
 
 .location {
@@ -58,6 +52,11 @@ option {
 
 .temp-card {
     background-color: rgba(0, 0, 0, 0.8);
+}
+
+.delivers{
+    font-weight: bold;
+    letter-spacing: 1.6px;
 }
 
 /* /Template */
