--- a/assets/css/contactPage.css
+++ b/assets/css/contactPage.css
@@ -6,5 +6,14 @@
 
 header {
     height: 10vh;
-    background-color: black;
+    background: rgba(21, 47, 79, 0.6);
 }
+
+.footer {
+    background: rgba(21, 47, 79, 0.6);
+    width: 100%;
+}
+ body {
+     background-image: url("../../src/rest.jpeg");
+ }
+
