--- a/assets/css/infopage.css
+++ b/assets/css/infopage.css
@@ -33,15 +33,39 @@ i{font-size: 18px;}
 .teamPic{
     margin-left: 6%;
     margin-right: 6%;
-    height: 500px;
+    height: 404px;
+    width: 561px;
     background-color: yellow;
     background-image: url("../../src/group.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
 }
 
+.container img{
+    width: 441px;
+    height: 340px;
+    float: left;
+    margin-right: 30px;
+}
+.container p {
+    text-align: justify;
+    font-size: 18px;
+    font-weight: 100;
+    margin-top: 20px;
+}
+.title{
+    padding-top: 20px;
+    padding-left: 65px;
+    font-size: 60px;
+}
+.title1{
+    padding-top: 20px;
+    padding-left: 65px;
+    letter-spacing: 1px;
 
+}
 
 
 
@@ -1607,7 +1631,7 @@ span.flatpickr-weekday {
     -ms-flex-align: center;
     align-items: center;
     font-family: 'Poppins', sans-serif;
-    background: url("../images/2.jpg");
+    background: url("../../template.eloualid/images/2.jpg");
     background-size: cover;
     background-position: center center;
     padding: 15px;
