--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,3 +91,40 @@ a:hover {
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.teamPic{
+    margin-left: 6%;
+    margin-right: 6%;
+    height: 404px;
+    width: 561px;
+    background-color: yellow;
+    background-image: url("../../src/group.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+.container img{
+    width: 441px;
+    height: 340px;
+    float: left;
+    margin-right: 30px;
+}
+.container p {
+    text-align: justify;
+    font-size: 18px;
+    font-weight: 100;
+    margin-top: 20px;
+}
+.title{
+    padding-top: 20px;
+    padding-left: 65px;
+    font-size: 60px;
+}
+.title1{
+    padding-top: 20px;
+    padding-left: 65px;
+    letter-spacing: 1px;
+
+}
