--- a/assets/css/contactPage.css
+++ b/assets/css/contactPage.css
@@ -4,20 +4,27 @@
     }
 }
 
+
 a {
-color: beige;
+    color: beige;
 }
+
 header {
     height: 10vh;
     background: rgba(21, 47, 79, 0.6);
-
 }
+
+h4 {
+    color: beige;
+}
+
 
 .footer {
     background: rgba(21, 47, 79, 0.6);
     width: 100%;
 }
- body {
-     background-image: url("../../src/rest.jpeg");
- }
+
+body {
+    background-image: url("../../src/rest.jpeg");
+}
 
