--- a/assets/css/infopage.css
+++ b/assets/css/infopage.css
@@ -1,27 +1,31 @@
-.footer{
-    background: #152F4F;
-    color:white;
+body {
+    background: black;
+    font-family: 'Raleway', sans-serif;
+    background: url("../../src/rest.jpeg") center center no-repeat fixed;
+    background-size: cover;
 }
 
 .teamPic{
-    margin-left: 6%;
-    margin-right: 6%;
-    height: 404px;
-    width: 561px;
+    margin-left: 2%;
+
     background-color: yellow;
     background-image: url("../../src/group.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
-}
-
-.container img{
     width: 441px;
     height: 340px;
     float: left;
     margin-right: 30px;
+
 }
+
+.container{
+    padding-bottom: 35px;
+    margin-top: 50px;
+}
+
+
 .container p {
     text-align: justify;
     font-size: 18px;
@@ -30,11 +34,15 @@
 }
 .title{
     padding-top: 20px;
-    padding-left: 65px;
+    padding-left: 23px;
     font-size: 60px;
 }
 .title1{
     padding-top: 20px;
-    padding-left: 65px;
+    padding-left: 23px;
     letter-spacing: 1px;
+}
+.footer {
+    background: rgba(21, 47, 79, 0.6);
+    width: 100%;
 }
