--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,3 +99,19 @@ a:hover {
     height: 100%;
     width: 30%;
 }
+
+.photos{
+    max-width: 100%;
+    width: 100%;
+    max-height: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.photo-wrap{
+    height: 100px;
+    width: 100px;
+}
+
+.grow { transition: all .2s ease-in-out; }
+.grow:hover { transform: scale(1.1); }
