--- a/assets/css/infopage.css
+++ b/assets/css/infopage.css
@@ -4,6 +4,10 @@ body {
     background: url("../../src/rest.jpeg") center center no-repeat fixed;
     background-size: cover;
 }
+.footer {
+    background: rgba(21, 47, 79, 0.6);
+    width: 100%;
+}
 
 .teamPic{
     width: 100%;
