--- a/assets/css/infopage.css
+++ b/assets/css/infopage.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background: black;
     font-family: 'Raleway', sans-serif;
@@ -8,6 +13,7 @@ body {
     background: rgba(21, 47, 79, 0.6);
     width: 100%;
 }
+
 
 .teamPic{
     width: 100%;
