--- a/assets/css/infopage.css
+++ b/assets/css/infopage.css
@@ -1,5 +1,4 @@
 body {
-    background: black;
     font-family: 'Raleway', sans-serif;
     background: url("../../src/rest.jpeg") center center no-repeat fixed;
     background-size: cover;
@@ -16,7 +15,7 @@ body {
 }
 
 header {
-    height: 10vh;
+
     background: rgba(21, 47, 79, 0.6);
 }
 h4 {
@@ -43,4 +42,24 @@ h4 {
 .footer {
     background: rgba(21, 47, 79, 0.6);
     width: 100%;
+}
+
+.location {
+    font-style: italic;
+    font-weight: bold;
+}
+
+a {
+    color: #D6924A;
+}
+
+a:hover {
+    color: white;
+}
+
+
+.rounded-circle{
+    margin-left: 40px;
+    width:440px;
+    height:420px;
 }
