--- a/ALTsite/stylealt.css
+++ b/ALTsite/stylealt.css
@@ -34,3 +34,31 @@ body{
     background-size: cover;
     background-position: center;
 }
+
+.card-img-top{
+    padding-left: 30px;
+    padding-right: 30px;
+    height: 250px;
+}
+
+.coins {
+    height: 31px;
+    display: flex;
+}
+
+.coin1, .coin2, .coin3, .coin4 {
+    height: 100%;
+    width: 17%;
+    margin-right: 3px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.tags{
+    display: flex;
+    text-align: center;
+}
+.card-deck{
+    margin-left: 0;
+    margin-right: 0;
+}
