--- a/ALTsite/stylealt.css
+++ b/ALTsite/stylealt.css
@@ -62,3 +62,6 @@ body{
     margin-left: 0;
     margin-right: 0;
 }
+
+.grow { transition: all .2s ease-in-out; }
+.grow:hover { transform: scale(1.1); }
