--- a/ALTsite/assets/css/style.css
+++ b/ALTsite/assets/css/style.css
@@ -93,3 +93,9 @@ a:hover {
 
 .grow { transition: all .2s ease-in-out; }
 .grow:hover { transform: scale(1.1); }
+
+.card-deck {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: .5rem;
+}
