--- a/ALTsite/stylealt.css
+++ b/ALTsite/stylealt.css
@@ -65,3 +65,9 @@ body{
 
 .grow { transition: all .2s ease-in-out; }
 .grow:hover { transform: scale(1.1); }
+
+.card-deck {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
+    grid-gap: .5rem;
+}
