--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,3 +71,13 @@ body{
     grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
     grid-gap: .5rem;
 }
+
+.footer{
+    background-color: black;
+}
+
+.logoName{
+    text-shadow: #000000 1px 0 10px;
+    font-size: 30px;
+    font-family: 'Lobster', cursive;
+}
