change country width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,12 @@ body{
     display: flex;
 }
 
+@media only screen and (max-width: 620px) {
+    .wrapper img{
+        width: 100%;
+    }
+}
+
 .search-sec{
     padding: 2rem;
 }
